chore(environment): TargetFilter as record not for http